Fixed slideshow layout
Figured out a way to get the image to take up available width/height without overflowing the window and it's container.

--- a/components/listings/listing_detail/SlideShow/SlideShow.module.css
+++ b/components/listings/listing_detail/SlideShow/SlideShow.module.css
@@ -1,25 +1,36 @@
 .slideShow {
-  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
   display: grid;
-  grid-template-rows: auto 1fr;
+  grid-template-rows: 95px 90%;
+  height: 100vh;
+  width: 100%;
+  background-color: black;
   color: white;
+  border: none;
+}
+
+.slideShowClosed {
+  display: none;
 }
 
 .carousel {
-  display: grid;
-  grid-template-columns: auto 1fr auto;
-  place-items: center;
+  display: flex;
+  justify-content: space-between;
+}
+
+.listingImageFigure {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .listingImage {
-  box-sizing: border-box;
-  display: block;
-  object-fit: contain;
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  border: 0;
-  background: rgba(116, 245, 115, 0.18)
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .header {
@@ -27,6 +38,11 @@
   align-items: center;
   justify-content: space-between;
   padding: 2.5rem 3rem 1.25rem 2.5rem;
+}
+
+.caption {
+  padding: 0.5rem;
+  text-align: center;
 }
 
 .close {
@@ -49,6 +65,11 @@
 .imageCount {
   text-align: center;
   flex-grow: 1;
+}
+
+.carouselButtonContainer {
+  display: flex;
+  align-items: center;
 }
 
 .carouselButton {
